Fixed mis-aligned text area, and corrected quest-bar help text.  Please run initalize_instance command.

--- a/makahiki/static/less/makahiki.less
+++ b/makahiki/static/less/makahiki.less
@@ -241,6 +241,11 @@
     float: right;
 }
 
+/* Vertically centers the text area in the Upcoming events widget. */
+.event-code input {
+    margin-bottom: 0px;
+}
+
 /*------- General Dialog style to center the OK button. ---*/
 .ui-dialog .ui-dialog-buttonpane {
   text-align: center;
